@@ -7,6 +7,7 @@ Development version (next release)
 - Added an option to set OpenCL compiler options through the env variable CLBLAST_BUILD_OPTIONS
 - Added an option to run tuned kernels multiple times to average execution times
 - Various minor fixes and enhancements
+- Added tuned parameters for various devices (see README)
 
 Version 0.9.0
 - Updated to version 6.0 of the CLCudaAPI C++11 OpenCL header
